...
                    icon: "key.fill",
                    title: "Use Password",
                    description: "Traditional password-based login",
                    isDisabled: !paraManager.isSignupMethodAvailable(method: .password, authState: authState),
                    action: { setupAccount(method: .password) },
                )
                .accessibilityIdentifier("passwordButton")
            }
            .padding(.horizontal)

            Spacer()
        }
        .padding()
        .navigationTitle("Secure Your Account")
        .navigationBarBackButtonHidden(isLoading)
    }

    private func securityOptionButton(
        icon: String,
        title: String,
...
