...
            .background(Color.blue.opacity(0.1))
            .cornerRadius(16)
        }
        .buttonStyle(PlainButtonStyle())
        .disabled(isCreatingWallet)
        .padding(.horizontal, 20)
        .accessibilityIdentifier("createFirstWalletButton")
    }

    @ViewBuilder
    private var walletsList: some View {
        List(filteredWallets, id: \.id) { wallet in
            NavigationLink {
...
                    Button("Logout") {
                        Task {
                            try! await paraManager.logout()
                            appRootManager.setAuthenticated(false)
                        }
                    }
                    .accessibilityIdentifier("logoutButton")
                }
            }
            .confirmationDialog("Wallet Type", isPresented: $showSelectCreateWalletTypeView) {
                Button("EVM") {
                    createWallet(type: .evm)
                }
...
